--- a/app/src/main/res/layout/fragment_toprated.xml
+++ b/app/src/main/res/layout/fragment_toprated.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_toprated"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.toprated.TopRatedFragment">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/toprated_recylcer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
