--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_main"
     android:orientation="vertical">
+
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpagerSlider"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="15dp"
+        android:layout_weight="0"
+        android:background="@drawable/round_corners">
+
+    </androidx.viewpager2.widget.ViewPager2>
 
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_nav" />
+        android:layout_height="0dp"
+        android:layout_above="@+id/bottom_nav"
+        android:layout_weight="1"
+        android:background="@drawable/round_corner_top"
+        android:paddingTop="20dp" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -19,8 +38,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="?android:attr/windowBackground"
+        android:layout_weight="0"
+        android:background="@color/bg_main"
+        app:itemTextColor="@color/txt_color"
         app:menu="@menu/bottom_nav_menu" />
 
 
-</RelativeLayout>
+</LinearLayout>
