--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,33 +12,45 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewpagerSlider"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_marginLeft="16dp"
+        android:layout_height="150dp"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="15dp"
-        android:layout_weight="0"
-        android:background="@drawable/round_corners">
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_weight="0">
 
     </androidx.viewpager2.widget.ViewPager2>
 
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Movie list:"
+        android:textSize="12sp"
+        android:padding="18dp"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:background="@color/card_color"
+        android:textColor="@color/txt_color"
+        android:layout_marginBottom="10dp"
+        />
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_above="@+id/bottom_nav"
         android:layout_weight="1"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/round_corner_top"
-        android:paddingTop="20dp" />
+        android:paddingTop="15dp" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_weight="0"
+        app:itemIconSize="38sp"
         android:background="@color/bg_main"
         app:itemTextColor="@color/txt_color"
         app:menu="@menu/bottom_nav_menu" />
