--- a/app/src/main/res/layout/loading_activity.xml
+++ b/app/src/main/res/layout/loading_activity.xml
@@ -7,9 +7,19 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Movie App"
+        android:textColor="@color/txt_color"
+        android:textSize="38sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:paddingTop="25dp"
+        />
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_height="500dp"
         android:layout_centerInParent="true"
         android:background="@color/bg_color"
         app:cardCornerRadius="30dp">
