--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_main"
     android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/bg_main"
+        android:gravity="center"
+        app:title="Movie app"
+        app:titleTextColor="@color/txt_color" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +31,6 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="12dp"
             android:layout_marginBottom="15dp"
-
             android:layout_weight="0">
 
         </androidx.viewpager2.widget.ViewPager2>
@@ -34,11 +42,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="@drawable/round_corners"
-        android:padding="18dp"
+        android:padding="12dp"
         android:text="Movie list:"
         android:textAllCaps="true"
         android:textColor="@color/txt_color"
-        android:textSize="12sp"
+        android:textSize="11sp"
         android:textStyle="bold" />
 
     <FrameLayout
@@ -56,11 +64,11 @@
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_margin="3dp"
         android:layout_weight="0"
         android:background="@color/bg_main"
         app:itemIconSize="38sp"
-        app:itemIconTint="@color/txt_color"
-        android:layout_margin="3dp"
+        app:itemIconTint="@drawable/bottom_navigation_selector"
         app:itemTextColor="@color/white"
         app:menu="@menu/bottom_nav_menu" />
 
