--- a/app/src/main/res/layout/similar_movie.xml
+++ b/app/src/main/res/layout/similar_movie.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_similar"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="15dp"
-        android:background="@color/bg_main"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/similar_recycler"
@@ -18,5 +16,8 @@
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:scrollbars="vertical" />
-    </RelativeLayout>
+
+    </LinearLayout>
+
+
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
