slider indicator details

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/round_corner_bot">
 
         <androidx.viewpager2.widget.ViewPager2
@@ -28,19 +29,11 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="12dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="0" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layoutIndicators"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="15dp" />
 
     <TextView
         android:layout_width="match_parent"
