--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,13 +38,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/nav_location_txt"
         android:layout_marginBottom="10dp"
         android:background="@drawable/round_corners"
         android:padding="12dp"
-        android:text="Movie list:"
+        android:text="TOP RATED MOVIES"
         android:textAllCaps="true"
         android:textColor="@color/txt_color"
-        android:textSize="11sp"
+        android:textSize="13sp"
         android:textStyle="bold" />
 
     <FrameLayout
