--- a/app/src/main/res/layout/similar_movie_list.xml
+++ b/app/src/main/res/layout/similar_movie_list.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/movieImage"
+                android:id="@+id/similarMovieImage"
                 android:layout_width="140dp"
                 android:layout_height="220dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
@@ -40,7 +40,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/ratingMovieTxt"
+                        android:id="@+id/similarRatingMovieTxt"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="end"
@@ -61,12 +61,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/titleMovie"
+                        android:id="@+id/similarTitleMovie"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:maxLines="2"
                         android:textColor="@color/white"
                         android:textSize="18sp"
-                        android:maxLines="2"
                         android:textStyle="bold" />
 
 
@@ -88,7 +88,7 @@
                         android:textSize="13sp" />
 
                     <TextView
-                        android:id="@+id/releasedateTxt"
+                        android:id="@+id/similarReleasedateTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
@@ -114,36 +114,12 @@
                         android:textSize="13sp" />
 
                     <TextView
-                        android:id="@+id/originalTitleTxt"
+                        android:id="@+id/similarOriginalTitleTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/white"
                         android:textSize="13sp" />
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="13dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                    </TextView>
-
-                    <ImageView
-                        android:id="@+id/share_btn"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_weight="0"
-                        android:layout_marginRight="20dp"
-                        android:src="@drawable/ic_baseline_share_24" />
 
 
                 </LinearLayout>
