--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.makeramen.roundedimageview.RoundedImageView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/imageSlide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:adjustViewBounds="true"
-    android:scaleType="fitXY"
-    app:riv_corner_radius="10dp">
+    android:orientation="vertical">
 
-</com.makeramen.roundedimageview.RoundedImageView>
+    <TextView
+        android:padding="5dp"
+        android:id="@+id/slicer_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Movie title" />
+
+    <com.makeramen.roundedimageview.RoundedImageView
+
+        android:id="@+id/imageSlide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        app:riv_corner_radius="10dp" />
+
+</LinearLayout>
