--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,9 +18,9 @@
         tools:layout="@layout/fragment_popular" />
 
     <fragment
-        android:id="@+id/navigation_upcoming"
+        android:id="@+id/navigation_discover"
         android:name="com.example.movies.ui.popular.PopularFragment"
-        android:label="@string/title_upcoming"
-        tools:layout="@layout/fragment_upcoming" />
+        android:label="@string/title_discover"
+        tools:layout="@layout/fragment_discover" />
 
 </navigation>
