--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="55dp"
         android:background="@color/bg_main"
         android:gravity="center"
         app:title="Movie app"
@@ -20,32 +20,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/round_corner_bot">
+        android:background="@drawable/round_corner_bot"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:paddingLeft="12dp"
+            android:paddingTop="8dp"
+            android:paddingRight="12dp"
+            android:text="Upcoming Movies"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpagerSlider"
-            android:layout_width="match_parent"
-            android:layout_height="185dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="0" />
+            android:layout_width="wrap_content"
+            android:layout_height="180dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" />
 
     </LinearLayout>
 
 
     <TextView
+        android:id="@+id/nav_location_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/nav_location_txt"
         android:layout_marginBottom="10dp"
         android:background="@drawable/round_corners"
-        android:padding="12dp"
-        android:text="TOP RATED MOVIES"
-        android:textAllCaps="true"
-        android:textColor="@color/txt_color"
-        android:textSize="13sp"
+        android:padding="10dp"
+        android:paddingLeft="5dp"
+        android:text="Top Rated Movies"
+        android:textColor="@color/white"
+        android:textSize="14sp"
         android:textStyle="bold" />
 
     <FrameLayout
@@ -56,7 +70,7 @@
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
         android:background="@drawable/round_corner_top"
-        android:paddingTop="15dp" />
+        android:paddingTop="10dp" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
