--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -7,16 +7,18 @@
     android:orientation="vertical">
 
     <TextView
-        android:padding="5dp"
         android:id="@+id/slicer_title"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Movie title" />
+        android:padding="5dp"
+        android:text="Movie title"
+        android:textColor="@color/txt_color"
+        android:textStyle="italic" />
 
     <com.makeramen.roundedimageview.RoundedImageView
 
         android:id="@+id/imageSlide"
-        android:layout_width="match_parent"
+        android:layout_width="160dp"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
