--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="185dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/round_corner_bot"
         android:orientation="vertical">
@@ -37,12 +37,12 @@
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpagerSlider"
-            android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp" />
 
