--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -8,17 +8,16 @@
 
     <TextView
         android:id="@+id/slicer_title"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:padding="5dp"
         android:text="Movie title"
-        android:textColor="@color/txt_color"
-        android:textStyle="italic" />
+        android:textColor="@color/txt_color" />
 
     <com.makeramen.roundedimageview.RoundedImageView
 
         android:id="@+id/imageSlide"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
