--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="185dp"
+        android:layout_height="200dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/round_corner_bot"
         android:orientation="vertical">
@@ -26,11 +26,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:paddingLeft="12dp"
             android:paddingTop="8dp"
             android:paddingRight="12dp"
-            android:text="Upcoming Movies"
+            android:text="@string/upcoming_movies"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold" />
@@ -57,7 +57,7 @@
         android:background="@drawable/round_corners"
         android:padding="10dp"
         android:paddingLeft="5dp"
-        android:text="Top Rated Movies"
+        android:text="@string/top_rated_movies"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold" />
@@ -66,7 +66,6 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/bottom_nav"
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
         android:background="@drawable/round_corner_top"
