--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/discover_recylcer"
+        android:id="@+id/discover_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
