--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
-        android:text="Movie title"
+        android:text="@string/movie_title_image_item"
         android:textColor="@color/txt_color" />
 
     <com.makeramen.roundedimageview.RoundedImageView
