--- a/app/src/main/res/layout/movies_list.xml
+++ b/app/src/main/res/layout/movies_list.xml
@@ -36,7 +36,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginEnd="20dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -54,9 +54,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="13dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="25dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginBottom="15dp"
                     android:orientation="horizontal">
 
@@ -64,9 +64,9 @@
                         android:id="@+id/titleMovie"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:maxLines="2"
                         android:textColor="@color/white"
                         android:textSize="18sp"
-                        android:maxLines="2"
                         android:textStyle="bold" />
 
 
@@ -75,15 +75,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="13dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="Release Date:"
+                        android:text="@string/release_date_list"
                         android:textColor="@color/txt_color"
                         android:textSize="13sp" />
 
@@ -91,7 +91,7 @@
                         android:id="@+id/releasedateTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/white"
                         android:textSize="13sp" />
 
@@ -101,15 +101,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="13dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="Language:"
+                        android:text="@string/language_list"
                         android:textColor="@color/txt_color"
                         android:textSize="13sp" />
 
@@ -117,7 +117,7 @@
                         android:id="@+id/originalTitleTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/white"
                         android:textSize="13sp" />
 
@@ -141,8 +141,8 @@
                         android:id="@+id/share_btn"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:layout_marginEnd="20dp"
                         android:layout_weight="0"
-                        android:layout_marginRight="20dp"
                         android:src="@drawable/ic_baseline_share_24" />
 
 
