--- a/app/src/main/res/layout/similar_movie_list.xml
+++ b/app/src/main/res/layout/similar_movie_list.xml
@@ -54,9 +54,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="13dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="25dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginBottom="15dp"
                     android:orientation="horizontal">
 
@@ -75,15 +75,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="13dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="Release Date:"
+                        android:text="@string/release_date_list"
                         android:textColor="@color/txt_color"
                         android:textSize="13sp" />
 
@@ -91,7 +91,7 @@
                         android:id="@+id/similarReleasedateTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/white"
                         android:textSize="13sp" />
 
@@ -101,15 +101,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="13dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="Language:"
+                        android:text="@string/language_list"
                         android:textColor="@color/txt_color"
                         android:textSize="13sp" />
 
@@ -117,7 +117,7 @@
                         android:id="@+id/similarOriginalTitleTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/white"
                         android:textSize="13sp" />
 
