--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -11,14 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/movie_title_image_item"
         android:textColor="@color/txt_color" />
 
     <com.makeramen.roundedimageview.RoundedImageView
-
         android:id="@+id/imageSlide"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="350dp"
+        android:layout_height="180dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         app:riv_corner_radius="10dp" />
