--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="bg_color">#191b20</color>
     <color name="txt_color">#f0b90b</color>
+    <color name="bg_main2">#111216</color>
     <color name="bg_main">#14151a</color>
     <color name="card_color">#1e2026</color>
-    <color name="icon_notselected">#757575</color>
+    <color name="icon_selected">#757575</color>
     <color name="colorOnBoardingIndicator">#757582</color>
     <color name="color_background">#000</color>
     <color name="color_font">#96979b</color>
