--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_upcoming"
-        android:icon="@mipmap/ic_toprated"
+        android:icon="@drawable/ic_baseline_home_24"
         android:title="@string/title_upcoming" />
 
     <item
