--- a/app/src/main/res/layout-v26/movie_details.xml
+++ b/app/src/main/res/layout-v26/movie_details.xml
@@ -42,10 +42,11 @@
                 android:layout_marginTop="12dp"
                 android:autoSizeStepGranularity="2sp"
                 android:autoSizeTextType="uniform"
+                android:maxLines="2"
                 android:paddingBottom="5dp"
                 android:text="@string/title_movie_details"
                 android:textColor="@color/txt_color"
-                android:textSize="20sp"
+                android:textSize="17sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/cover"
                 app:layout_constraintTop_toBottomOf="@+id/poster"
