--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -40,14 +40,14 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="12dp"
+                android:maxLines="2"
                 android:paddingBottom="5dp"
                 android:text="@string/title_movie_details"
                 android:textColor="@color/txt_color"
-                android:textSize="18sp"
+                android:textSize="17sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/cover"
-                app:layout_constraintTop_toBottomOf="@+id/poster"
-                tools:ignore="RtlSymmetry" />
+                app:layout_constraintTop_toBottomOf="@+id/poster" />
 
             <TextView
                 android:id="@+id/releasetxt"
@@ -129,18 +129,20 @@
                 android:padding="10dp"
                 android:textSize="12sp" />
 
-            <Button
-                android:id="@+id/btn_similar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="8dp"
-                android:backgroundTint="@color/txt_color"
-                android:text="@string/similar_movie"
-                android:textColor="@color/bg_main"
-                android:textSize="12sp"
-                android:textStyle="bold" />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_similar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="8dp"
+            android:backgroundTint="@color/txt_color"
+            android:text="@string/similar_movie"
+            android:textColor="@color/bg_main"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
     </LinearLayout>
 </ScrollView>
